@@ -89,6 +89,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 474332  aligned_alloc under Valgrind returns nullptr when alignment is not a multiple of sizeof(void *)
 475650  DRD does not work with C11 threads
 475652  Missing suppression for __wcsncpy_avx2 (strncpy-avx2.S:308)?
+476108  vg_replace_malloc DELETE checks size
 n-i-bz  Allow arguments with spaces in .valgrindrc files
 n-i-bz  FreeBSD fixed reading of Valgrind tools own debuginfo
 
